fixed spacing issues

--- a/ABOUT/about.css
+++ b/ABOUT/about.css
@@ -312,6 +312,7 @@ header .container {
   line-height: 1.2;
   position: relative;
   text-align: center;
+  margin-top: 120px;
 }
 
 
